feat: malformed urls are not allowed