@@ -1,37 +1,46 @@
 package dev.smo.shortener.backend.util;
 
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+
+import java.net.URI;
 
 public class UrlUtils {
 
-    private static final Pattern URL_PATTERN = Pattern.compile(
-            "^(https?)://[\\w.-]+(?:\\.[\\w.-]+)+[/#?]?.*$",
-            Pattern.CASE_INSENSITIVE
-    );
-
-    public static boolean isValidURL(String url) {
-        if (url == null || url.trim().isEmpty()) {
+    public static boolean isValidURL(String urlToCheck) {
+        if (urlToCheck == null || urlToCheck.isBlank()) {
             return false;
         }
-        return URL_PATTERN.matcher(url).matches();
-    }
 
-    // Regex breakdown:
-    // ^https?://        → required http or https
-    // ([^/:?#]+)        → capture host (up to port, path, or query)
-    private static final Pattern HOST_PATTERN =
-            Pattern.compile("^(?:https?)://([^/:?#]+)");
-//            Pattern.compile("^(?:https?|ftp)://([^/:?#]+)");
+        try {
+            URI uri = new URI(urlToCheck);
 
-    public static String extractHost(String url) {
-        if (url == null) return null;
+            // Must be absolute
+            if (!uri.isAbsolute()) {
+                return false;
+            }
 
-        Matcher matcher = HOST_PATTERN.matcher(url);
-        if (matcher.find()) {
-            return matcher.group(1);
+            // Only allow http / https
+            String scheme = uri.getScheme();
+            if (!"http".equalsIgnoreCase(scheme) && !"https".equalsIgnoreCase(scheme)) {
+                return false;
+            }
+
+            // Must have a host (prevents "http:/test")
+            if (uri.getHost() == null) {
+                return false;
+            }
+
+            return true;
+        } catch (Exception e) {
+            return false;
         }
-        return null;
     }
 
+    public static String extractHost(String input) {
+        try {
+            URI uri = new URI(input);
+            return uri.getHost(); // may be null if invalid
+        } catch (Exception e) {
+            return null;
+        }
+    }
 }
